# Tool-Use-Coding-Agent

./: Makefile  README.md
python/: pyproject.toml  setup.cfg
python/tu_agent/agents/: base.py  q_learning.py  random_agent.py
python/tu_agent/env/: task_loader.py  tool_env.py
python/tu_agent/runner/: auto_runner.py  rust_runner.py  types.py
python/tu_agent/scripts/: run_episode.py  train_qlearn.py
python/tu_agent/utils/: text.py
rust/sandbox_runner/: .gitignore  Cargo.toml
rust/sandbox_runner/src/: main.rs
tasks/bugfix_1/: patches.json
tasks/bugfix_1/src/: solution.py
tasks/bugfix_1/tests/: test_solution.py
tasks/bugfix_2/: patches.json
tasks/bugfix_2/src/: solution.py
tasks/bugfix_2/tests/: test_solution.py
tasks/bugfix_3/: patches.json
tasks/bugfix_3/src/: solution.py
tasks/bugfix_3/tests/: test_solution.py
