[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tu-agent"
version = "0.1.0"
description = "Tool-use coding agent environment + baselines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tu-run-episode = "tu_agent.scripts.run_episode:main"
tu-train-qlearn = "tu_agent.scripts.train_qlearn:main"
